--- a/style.css
+++ b/style.css
@@ -2,10 +2,93 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: roboto;
 }
  
 html, body {
     height: 100%;
     width: 100%;
+    background-color: #222;
 }
 
+.main {
+    height: 100vh;
+}
+
+.nav-bar {
+    height: 7vh;
+    padding: 0 8vh;
+    width: 100%;
+    background-color: crimson;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav-bar .logo {
+    font-size: 1.8vh;
+}
+
+.nav-bar .anchors {
+    display: flex;
+    align-items: center;
+    gap: 8vh;
+    cursor: pointer;
+    font-size: 1.5vh;
+}
+
+.anchors .input {
+    height: 3.5vh;
+    width: 20vw;
+    background-color: rgb(207, 207, 207);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: .4vh;
+    overflow: hidden;
+}
+
+.input input {
+    width: 90%;
+    height: 100%;
+    outline: none;
+    border: none;
+    padding-left: 2vh;
+}
+
+.input #search {
+    height: 100%;
+    width: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(214, 214, 214);
+    font-size: 1.6vh;
+    text-align: end;
+}
+
+.nav-bar .anchors ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style-type: none;
+    cursor: pointer;
+    gap: 3vh;
+}
+
+.icons {
+    font-size: 1.5vh;
+    cursor: pointer;
+    display: flex;
+    gap: 2vh;
+}
+
+.icons #account {
+    margin-right: 1vh;
+}
+
+.icons i {
+    font-weight: 100;
+    cursor: pointer;
+    font-size: 2.2vh;
+}
